<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/buscar"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/accionAnhadirPost"
        android:title="@string/anhadir_post" />
    <item
        android:id="@+id/accionModificarPost"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/modificar_post" />
    <item
        android:id="@+id/accionEliminarPost"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/eliminar_post" />

    <item
        android:id="@+id/accionRefrescar"
        android:icon="@drawable/refreshpagebutton_99726"
        android:title="@string/reset"
        app:showAsAction="always" />
</menu>

    <!--.widget.SearchView-->
