<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_negro_appjson"
    tools:context=".app.ui.Activity_Info_Detalle">

    <TextView
        android:id="@+id/tv_titulo_nombre_completo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cantora_one"
        android:text="@string/tv_titulo_nombre_completo"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_user" />

    <TextView
        android:id="@+id/tv_nombre_completo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/cantora_one"
        android:hint="@string/tv_nombre_completo"
        android:textColor="#D3D1D1"
        android:textColorHint="#D3D1D1"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_titulo_nombre_completo"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_user" />

    <TextView
        android:id="@+id/tv_titulo_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cantora_one"
        android:text="@string/tv_nickname"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo_nombre_completo" />

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/cantora_one"
        android:hint="@string/tv_nickname"
        android:textColor="#D3D1D1"
        android:textColorHint="#D3D1D1"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_titulo_nickname"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_completo" />

    <TextView
        android:id="@+id/tv_titulo_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cantora_one"
        android:text="@string/tv_titulo_emailemail"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo_nickname" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/cantora_one"
        android:hint="@string/tv_email"
        android:textColor="#D3D1D1"
        android:textColorHint="#D3D1D1"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_titulo_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_nickname" />

    <TextView
        android:id="@+id/tv_titulo_telefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cantora_one"
        android:text="@string/tv_titulo_telefono"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo_email" />

    <TextView
        android:id="@+id/tv_telefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/cantora_one"
        android:hint="@string/tv_telefono"
        android:textColor="#D3D1D1"
        android:textColorHint="#D3D1D1"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_titulo_telefono"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_titulo_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cantora_one"
        android:text="@string/tv_titulo_company"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo_telefono" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/cantora_one"
        android:hint="@string/tv_company"
        android:textColor="#D3D1D1"
        android:textColorHint="#D3D1D1"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_titulo_company"
        app:layout_constraintTop_toBottomOf="@+id/tv_telefono" />

    <TextView
        android:id="@+id/tv_info_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/russo_one"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:text="@string/tv_titulo_info_usuario"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_aceptar"
        style="sh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/shape_boton_redondeado"
        android:fontFamily="@font/cantora_one"
        android:text="@string/btn_aceptar"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_company" />
</androidx.constraintlayout.widget.ConstraintLayout>